2001-06-10  Dan Dennedy <dan@dennedy.org>
	* bug fix in librom1394/rom1394_internal.c:proc_directory, a failed
	  read on first quadlet could lead to an invalid directory length
	* librom1394 now first checks for valid node

2001-05-27  Dan Dennedy <dan@dennedy.org>
    * added librom1394
    * added test program, romtest, for testing librom1394
    * moved raw1394util into a common directory because it use by
      both libraries
    
2001-05-11  Dan Dennedy
    * various build fixes requires moving src/ to libavc1394/
    * adapt raw1394util.c to new v0.9 libraw1394 API, 
      auto compatible with libraw1394 v0.8+
    * change avc1394_is_subunit_recorder() to a more generic
      avc1394_check_subunit_type()
    * make dvcont determine first numerically sequential node
      that is VCR subunit and use it if no dev specified.

2001-05-10  Dan Dennedy  <dan@dennedy.org>
	* converted Andreas Mickleis' simplavc into a library
	* converted Jason Howard's dvcont to use libavc1394 vcr interface
