@@ -1,0 +1,2 @@
+#undef RAW1394_V_0_9
+#undef RAW1394_V_0_8
